Fixed header spacing

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -1,8 +1,25 @@
 .main-navigation {
-	display: flex;
+	display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr auto 1fr;
 	align-items: center;
-	justify-content: space-between;
-	width: 100%;
+    align-content: center;
+	justify-content: center;
+    gap: 0.8rem;
+    padding: 0 0.8rem;
+	//width: 100%;
+
+    #primary-menu {
+        justify-content: start;
+        grid-template-rows: auto;
+        grid-template-columns: auto auto auto auto;
+    }
+
+    #header-right {
+        justify-content: end;
+        grid-template-rows: auto;
+        grid-template-columns: auto auto auto auto;
+    }
 
 	.custom-logo-link {
 		height: 3.4375rem;
